# af-explain

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
annotations/: README.md
configs/: train.yaml
configs/data/: physionet2017.yaml
configs/model/: resnet18_1d.yaml
docs/: methods.qmd  references.bib
hf_space/: .gitignore  DEPLOY.md  README.md  app.py  requirements.txt
notebooks/: 01_data_exploration.ipynb  02_baseline_model.ipynb  03_explainability.ipynb  04_clinical_interpretation.ipynb  README.md
scripts/: download_data.sh  train.sh  train_overnight.sh
src/af_explain/: __init__.py
src/af_explain/app/: streamlit_app.py
src/af_explain/baselines/: __init__.py  cosen.py
src/af_explain/cli/: predict.py
src/af_explain/data/: __init__.py  dataset.py  download.py  preprocess.py
src/af_explain/evaluation/: __init__.py  clinical_analysis.py
src/af_explain/explain/: __init__.py  gradcam.py  integrated_gradients.py
src/af_explain/models/: __init__.py  resnet1d.py
src/af_explain/training/: __init__.py  lightning_module.py  train.py
tests/: conftest.py  test_baselines.py  test_clinical_analysis.py  test_explain.py  test_model.py  test_preprocess.py
