[project]
name = "af-explain"
version = "0.1.0"
description = "Explainable deep learning for atrial fibrillation detection on single-lead ECG"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Laura Piñero Roig", email = "laurapineroroig@gmail.com" },
]
keywords = [
    "atrial-fibrillation",
    "ecg",
    "deep-learning",
    "explainable-ai",
    "cardiology",
    "physionet",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "torch>=2.2,<3.0",
    "lightning>=2.2,<3.0",
    "torchmetrics>=1.3",
    "captum>=0.7",
    "wfdb>=4.1",
    "scipy>=1.12",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "hydra-core>=1.3",
    "rich>=13.7",
    "typer>=0.12",
    "tqdm>=4.66",
]

[project.optional-dependencies]
app = [
    "streamlit>=1.32",
    "plotly>=5.20",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[project.scripts]
af-train = "af_explain.training.train:app"
af-predict = "af_explain.cli.predict:app"

[project.urls]
Homepage = "https://github.com/laurapiro17/af-explain"
Repository = "https://github.com/laurapiro17/af-explain"
Issues = "https://github.com/laurapiro17/af-explain/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/af_explain"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"notebooks/*" = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow",
    "gpu: marks tests that require GPU",
]
